# Underground-Engine

./: .gitignore  CMakeLists.txt  README.md  Todo  imgui.ini  todo
.cache/clangd/index/: Component.h.F72F53FBC7B4ED05.idx  GameObject.h.61EE5D0D00166B06.idx  GameTime.h.31E143420A272385.idx  Importer.hpp.D7166928F1BE6384.idx  MathFunctions.h.7D02CAD0F136CCC5.idx  Mesh.h.F7262BC94CE5B56D.idx  MeshRenderer.h.59382293FFB3106A.idx  Model.h.45869FE97614A71B.idx  PlayerMove.h.EA9DD45ECD61B03F.idx  Scene.h.F43C54FD502EA7C0.idx  Shader.h.12C47A61F449A3DB.idx  _fixes.hpp.332B037DA12F659F.idx  _vectorize.hpp.698E073F3FB9184C.idx  aabb.h.277BC24D34A22883.idx  anim.h.0BC4DC9A72683449.idx  camera.h.4F497336643494E1.idx  color4.h.D4E155BE1CF11AF8.idx  color4.inl.4BBF37C879443A5E.idx  common.hpp.D3C0CB5E5D2573DB.idx  component.cpp.1E660123DCC668C7.idx  compute_common.hpp.F9A3F216B1BCA879.idx  compute_vector_relational.hpp.4877EB7B0F6BC4DF.idx  config.h.6B7E6CF5672A78A3.idx  constants.hpp.C0E24CC62DD6A024.idx  constants.inl.05C29F069446F086.idx  defs.h.81168407613145B2.idx  engine.cpp.F612E2DD5E7D302F.idx  engine.h.A9ACDAD5AA881ECA.idx  exponential.hpp.6F83C5ADFABE09BC.idx  func_common.inl.2B0F6D231A0F5E5C.idx  func_exponential.inl.D188E85A6B96CEB5.idx  func_geometric.inl.D2E97F67574A399F.idx  func_integer.inl.268884BCA4AC795F.idx  func_matrix.inl.4B495E503286C4D1.idx  func_packing.inl.FBB1F22457F33557.idx  func_trigonometric.inl.AE14D269B0DFF5D6.idx  func_vector_relational.inl.D520B17505C6554A.idx  fwd.hpp.90E1FBD63BEA1364.idx  gameObject.cpp.22E64540A1A0FC09.idx  gameTime.cpp.B36C884DE474024A.idx  (+173 more)
Core/: CMakeLists.txt
Core/AssetImporter/: CMakeLists.txt  mesh.cpp  model.cpp
Core/Components/: MeshRenderer.h  PlayerMove.h
Core/ECS/: CMakeLists.txt  gameObject.cpp
Core/GameTime/: CMakeLists.txt  gametime.cpp
Core/src/: engine.cpp  glad.c  main.cpp
Editor/: CMakeLists.txt
Editor/ProjectLoader/: CMakeLists.txt  projectLoader.cpp
Editor/UI/: CMakeLists.txt  imgui.cpp  imgui_impl_glfw.cpp
Editor/src/: main.cpp
include/: Component.h  Editor.h  GameObject.h  Mesh.h  Model.h  Player.h  Scene.h  Shader.h  Texture.h  engine.h
include/Components/: MeshRenderer.h  PlayerMove.h
include/ECS/: Scene.h
include/Editor/ProjectLoader/: ProjectLoader.h
include/Editor/UI/: EngineInterface.h
include/Engine/: Time.h  engine.h
include/Engine/AssetImporter/: Shader.h
include/Engine/ECS/: Component.h  GameObject.h  Scene.h
include/Engine/glad/: glad.h
include/GameTime/: GameTime.h
include/glad/: glad.h
src/: Model.cpp  Player.cpp  Texture.cpp  component.cpp  editor.cpp  engine.cpp  gameObject.cpp  main.cpp  mesh.cpp  model.cpp  scene.cpp  time.cpp
src/ECS/: component.cpp  gameObject.cpp  scene.cpp
src/ImGUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
